(executable
 (name gen_random_cases)
 (modules gen_random_cases)
 (libraries qcheck-core transit_core))

(rule
 (targets random_cases.ml)
 (deps gen_random_cases.exe)
 (action
  (run ./gen_random_cases.exe %{targets})))

(executable
 (name test_native)
 (modules test_shared random_cases test_native)
 (libraries transit_native))

(executable
 (name test_jsoo)
 (modes js)
 (modules test_shared random_cases test_jsoo)
 (libraries transit_jsoo))

(melange.emit
 (target transit_melange)
 (modules test_shared random_cases test_melange)
 (module_systems commonjs)
 (libraries transit_melange))

(rule
 (alias runtest)
 (package melange-transit-native)
 (targets native.out)
 (deps test_native.exe)
 (action
  (with-stdout-to
   %{targets}
   (run ./test_native.exe))))

(rule
 (alias runtest)
 (package melange-transit-jsoo)
 (enabled_if
  (= %{profile} dev))
 (targets jsoo.out)
 (deps test_jsoo.bc.js)
 (action
  (with-stdout-to
   %{targets}
   (run node ./test_jsoo.bc.js))))

(rule
 (alias runtest)
 (package melange-transit-melange)
 (enabled_if
  (= %{profile} dev))
 (targets melange.out)
 (deps
  (alias melange)
  transit_melange/test/test_melange.js)
 (action
  (with-stdout-to
   %{targets}
   (run node ./transit_melange/test/test_melange.js))))

(rule
 (alias cross-runtest)
 (enabled_if
  (= %{profile} dev))
 (deps native.out jsoo.out melange.out)
 (action
  (progn
   (run diff -u native.out jsoo.out)
   (run diff -u native.out melange.out))))
