(copy_files ../shared/transit_edn.ml)
(copy_files ../shared/transit_edn.mli)

(library
 (name transit_native)
 (public_name melange-transit-native)
 (modules transit transit_edn)
 (private_modules transit_edn)
 (modes byte native)
 (libraries melange-transit-core melange-edn-core melange-edn-native yojson ptime))
